# ans

./: .coverage  .coveragerc  .env.example  .gitignore  CHECKLIST.md  CONTRIBUTING.md  PRD.md  README.md  authenticate_telethon.py  chronicler.session.bak  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  test_telegram_transport_mocks.py
.cursor/: ARCHITECTURE.md  BACKLOG.md  CHECKLIST.md  CHECKLIST.template.md  COMMIT.template  CONVENTIONS.md  IMPLEMENTATION.md  NOTES.md  PRD.template.md  PROMPT.md  README.md  architecture.md  conventions.md  docs.md  git-workflow.md  prompt.md
.cursor/aspects/base/: COMMANDS.md  PROMPT.md
.cursor/aspects/pm/: COMMANDS.md  PROMPT.md
.cursor/aspects/swe/: COMMANDS.md  PROMPT.md
.cursor/docs/meta_commands/: PRD.md
.cursor/docs/test-coverage/: CHECKLIST.md  PRD.md
.cursor/hooks/: commit-msg
.cursor/scripts/: status-update.sh
.github/: pull_request_template.md
.github/workflows/: branch-protection.yml  python-ci.yml  release.yml  test-coverage.yml
docs/: commands.md  docs.md
src/chronicler/: __init__.py  exceptions.py  frames.py  pipecat_runner.py  pipeline.py
src/chronicler/commands/: __init__.py  context.py  frames.py  handlers.py  parser.py  processor.py
src/chronicler/frames/: __init__.py  base.py  command.py  media.py
src/chronicler/handlers/: __init__.py  command.py
src/chronicler/logging/: __init__.py  config.py
src/chronicler/pipeline/: __init__.py  frames.py  pipecat_runner.py  pipeline.py
src/chronicler/processors/: __init__.py  base.py  command.py  git_processor.py  storage.py  storage_processor.py
src/chronicler/scribe/: core.py  interface.py  telegram_scribe.py
src/chronicler/services/: git_sync.py  git_sync_service.py
src/chronicler/storage/: __init__.py  config_interface.py  config_store.py  coordinator.py  filesystem.py  git.py  interface.py  json_config.py  messages.py  serializer.py  telegram.py
src/chronicler/transports/: __init__.py  base.py  events.py  telegram_bot_event.py  telegram_bot_transport.py  telegram_bot_update.py  telegram_factory.py  telegram_transport.py  telegram_user_event.py  telegram_user_transport.py  telegram_user_update.py
tests/: README.md  conftest.py
tests/00-unit/: conftest.py  test_correlation_flow.py
tests/00-unit/commands/: __init__.py  test_command_frame.py  test_command_handlers.py  test_command_integration.py  test_command_processor.py  test_frames.py  test_handlers.py  test_processor.py
tests/00-unit/frames/: test_base.py  test_frames.py  test_media.py
tests/00-unit/logging/: test_crystalline_logging.py
tests/00-unit/pipeline/: test_frames.py  test_pipecat_runner.py  test_pipeline.py
tests/00-unit/processors/: test_command_processor.py  test_git_processor.py  test_processor.py  test_storage_processor.py
tests/00-unit/services/: test_git_sync_service.py
tests/00-unit/storage/: test_coordinator.py  test_filesystem.py  test_git.py  test_git_storage.py  test_serializer.py
tests/00-unit/transports/: __init__.py  conftest.py  test_application_builder.py  test_async_errors.py  test_events.py  test_telegram_bot_transport.py  test_telegram_factory.py  (+5 more)
tests/01-live/: 00-test_story_git_sync.py  __init__.py  conftest.py  test_story_telegram_auth_app.py  test_story_user_authentication.py
tests/01-mock/: __init__.py  test_command_integration.py
tests/mocks/: __init__.py  commands.py  fixtures.py  processors.py  storage.py
(+81 files in other folders)
