[project]
name = "chronicler"
version = "0.1.0"
description = "Telegram-based journaling system with LLM integration"
requires-python = ">=3.9"
dependencies = [
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[tool.hatch.build]
packages = ["src/chronicler"] 