[project]
name = "chronicler"
version = "0.1.0"
description = "Telegram-based journaling system with LLM integration"
requires-python = ">=3.9"
dependencies = [
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
    "python-telegram-bot>=20.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    --import-mode=importlib
    --log-cli-level=DEBUG
    --log-cli-format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
    --log-cli-date-format='%Y-%m-%d %H:%M:%S'
"""
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "live: marks tests as live integration tests",
    "slow: marks tests as slow running",
    "fs: marks tests that depend on filesystem features"
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[tool.hatch.build]
packages = ["src/chronicler"] 